# Reservoir-Computing

./: .gitmodules  CMakeLists.txt  MassSpringSystem.sln  README.md
MassSpringSystem/: MassSpringSystem.vcxproj  MassSpringSystem.vcxproj.filters  glad.c
MassSpringSystem/core/: camera.h  gnuplot-iostream.h  render_text.h  shader.h  shapes.h
MassSpringSystem/shader/: line_shader.vs  sphere_shader.vs
MassSpringSystem/src/: filereader.h  main.cpp  node.cpp  node.h  simulation.cpp  simulation.h  spring.h  system.h  utility.h
MassSpringSystem/src/Core/: Instrumentor.h  concurrency.h  filereader.h  main.cpp  node.cpp  node.h  simulation.cpp  simulation.h  spring.cpp  spring.h  system.cpp  system.h  utility.cpp  utility.h
MassSpringSystem/src/Data/: DataFeedback.txt  DataNoFeedback.txt  data_manipulation.py  preprocessing.py  signal_generator.py  test_target.py
MassSpringSystem/src/Graphics/: camera_ortho.h  render_text.h  shapes.h  sphere.cpp  sphere.h  window.h
MassSpringSystem/src/Output/: display_network.py  initial.txt  plot_output.py  thesis_plots.py  thesis_plots_input.py  thesis_plots_nofeedback.py  thesis_plots_perturbation.py
MassSpringSystem/src/Output/Results/: bestMSEEdge.txt  bestMSEEdge_00.txt  bestMSEEdge_01.txt  bestMSENode.txt  bestMSENode_00.txt  bestMSENode_01.txt
MassSpringSystem/src/Shader/: billboard.vs  sphere_shader.fs
bin-int/Debug-x64/: MassSpringSystem.exe.recipe  MassSpringSystem.vcxproj.FileListAbsolute.txt  vc142.idb
bin-int/Debug-x64/MassSpringSystem.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MassSpringSystem.lastbuildstate  MassSpringSystem.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
bin-int/Release-x64/: MassSpringSystem.exe.recipe  MassSpringSystem.vcxproj.FileListAbsolute.txt
bin-int/Release-x64/MassSpringSystem.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MassSpringSystem.lastbuildstate  MassSpringSystem.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
cmake/: FindGLM.cmake
